# pgmq

pgmq-rs/: Cargo.toml  README.md
pgmq-rs/examples/: basic.rs  install.rs  tokio_postgres_basic.rs  transactions.rs
pgmq-rs/src/: errors.rs  lib.rs  query.rs  types.rs  util.rs
pgmq-rs/src/adapters/: diesel_async.rs  diesel_sync.rs  helpers.rs  mod.rs  query.rs  queue_conn.rs  sqlx.rs  tokio_postgres.rs
pgmq-rs/src/adapters/diesel/: mod.rs  sync.rs
pgmq-rs/src/install/: diesel_async.rs  diesel_sync.rs  internal.rs  mod.rs  script.rs  sqlx.rs  tokio_postgres.rs  version.rs
pgmq-rs/src/install/embedded/: install_sql_embedded.md  mod.rs
pgmq-rs/src/install/github/: install_sql_github.md  mod.rs
pgmq-rs/src/pg_ext/: deprecated.rs  mod.rs  visibility_timeout_offest.rs
pgmq-rs/src/sql/: archive.sql  archive_batch.sql  bind_topic.sql  create.sql  create_fifo_index.sql  create_fifo_indexes_all.sql  create_partitioned.sql  create_partitioned_exists_check.sql  create_unlogged.sql  delete.sql  delete_batch.sql  disable_notify_insert.sql  drop_queue.sql  enable_notify_insert.sql  list_notify_insert_throttles.sql  list_queues.sql  list_topic_bindings.sql  list_topic_bindings_all.sql  metrics.sql  metrics_all.sql  pop.sql  purge_queue.sql  read.sql  read_grouped.sql  read_grouped_head.sql  read_grouped_rr.sql  read_grouped_rr_with_poll.sql  read_grouped_with_poll.sql  read_with_poll.sql  send.sql  send_batch.sql  send_batch_topic.sql  send_topic.sql  set_vt.sql  unbind_topic.sql  update_notify_insert.sql
pgmq-rs/src/sql/install/: init.sql  insert_applied_migration.sql  select_applied_migrations.sql  setup_migrations_table.sql
pgmq-rs/tests/: diesel_async_smoke.rs  diesel_sync_smoke.rs  error_modes.rs  install_per_driver.rs  pg_ext_integration_test.rs  pg_ext_integration_test.rs.pre-trait-refactor  sqlx_smoke.rs  test_sql.rs  tokio_postgres_smoke.rs
