[package]
name = "pgmq"
version = "0.34.0"
edition = "2021"
authors = ["PGMQ Maintainers"]
description = "A distributed message queue for Rust applications, on Postgres."
documentation = "https://docs.rs/pgmq"
homepage = "https://github.com/pgmq/pgmq"
keywords = ["messaging", "queues", "postgres"]
license = "PostgreSQL"
readme = "README.md"
repository = "https://github.com/pgmq/pgmq"

[[bin]]
name = "pgmq-cli"
path = "src/bin/pgmq-cli.rs"
required-features = ["cli"]

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]
tokio-postgres = ["dep:tokio-postgres"]
diesel-async = ["dep:diesel-async", "dep:diesel", "dep:futures-util", "futures-util/async-await-macro"]
diesel-sync = ["dep:diesel"]
tracing = ["dep:tracing"]
cli = ["sqlx", "dep:clap", "dep:env_logger", "dep:log", "dep:url", "url/serde", "dep:tokio", "tokio/macros", "tokio/rt", "install-sql-github", "install-sql-embedded"]
install-sql = ["dep:futures-util", "dep:regex", "dep:itertools"]
install-sql-github = ["install-sql", "dep:reqwest", "dep:url", "url/serde", "dep:log"]
install-sql-embedded = ["install-sql", "dep:include_dir"]

[dependencies]
# 1.x+ crates pinned to just the major.
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1"

# Optional driver-adapter dependencies.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "json", "macros"], optional = true }
tokio-postgres = { version = "0.7", default-features = false, features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
# deadpool-postgres is a *dev-dep only* — used by smoke tests/examples. Users bring whatever
# pool they prefer (deadpool, bb8, mobc, custom, none). pgmq depends only on tokio-postgres.
diesel = { version = "2", default-features = false, features = ["postgres", "chrono", "serde_json"], optional = true }
diesel-async = { version = "0.5", default-features = false, features = ["postgres", "deadpool"], optional = true }

# Optional observability.
tracing = { version = "0.1", optional = true }

# Optional CLI dependencies (only needed by the `cli` feature for the pgmq-cli binary).
tokio = { version = "1", default-features = false, optional = true }

# Optional install/CLI dependencies.
url = { version = "2", optional = true }
log = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.10", optional = true }
futures-util = { version = "0.3", optional = true }
include_dir = { version = "0.7", optional = true }
regex = { version = "1", optional = true }
itertools = { version = "0.14", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
deadpool-postgres = "0.14"      # used by tokio-postgres smoke tests + example
url = "2"                       # used by tokio-postgres smoke test to parse DATABASE_URL
cargo-readme = "3"
criterion = "0.4"
env_logger = "0.10"
rand = "0.8"
regex = "1"
lazy_static = "1"
insta = { version = "1", features = ["json"] }

# If a consumer has both the `time` and `chrono` features of `sqlx` enabled, `sqlx` will default to using
# `OffsetDateTime` (from `time`) for timestamp fields instead of `DateTime<Utc>` (from `chrono`), causing a compilation
# error in `pgmq`. See this issue for more details: https://github.com/launchbadge/sqlx/issues/3412
# Note: default-features = false to avoid pulling in sqlx::Any, which causes Type<_> ambiguity errors.
sqlx = { version = "0.8", default-features = false, features = ["time", "postgres", "runtime-tokio", "chrono", "macros", "json"] }

[[example]]
name = "install"
path = "examples/install.rs"
required-features = ["cli"]

[[example]]
name = "transactions"
path = "examples/transactions.rs"
required-features = ["sqlx", "install-sql-embedded"]

[[example]]
name = "tokio_postgres_basic"
path = "examples/tokio_postgres_basic.rs"
required-features = ["tokio-postgres", "install-sql-embedded"]

[package.metadata.docs.rs]
# Have docs.rs pass `--all-features` to ensure all features have their documentation built.
all-features = true
